# pico-colour-text

./: CMakeLists.txt  README.md  main.c
